--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,13 @@ body {
     line-height: 1.714;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
 } 
+
+.contacts-footer-item:hover,
+.contacts-footer-item:focus {
+    color: var(--accent-color);
+}
 
 /*======Стили списков на странице======*/
 
