--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,21 @@
 /*======Переменные======*/
 :root {
+    --main-color: #FFFFFF;
+    --logo-studio-header-color: #000000;
+    --header-hero-footer-bg-color: #2F303A;
     --accent-color: #2196F3;
     --description-color: #757575;
     --title-and-nav-font-color: #212121;
     --bg-color-secondary: #F5F4FA;
     --common-font-size: 16px;
+    --contact-footer-color: #ffffff99;
 }
 
 /*======Наследуемые стили======*/
 body {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
-    background-color: #FFFFFF;
+    background-color: var(--main-color);
 }
 
 /*======Шапка сайта======*/
@@ -25,25 +29,18 @@ body {
 }
 
 .logo-studio {
-    color: #000000;
+    color: var(--logo-studio-header-color);
 }
 
-.navigation-list-link {
+.navigation-list-link,
+.current-link,
+.contacts-list-link {
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.143px;
+    line-height: 1.143;
     letter-spacing: 0.02em;
     color: var(--title-and-nav-font-color);
     text-decoration: none;
-}
-
-.current-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    color: var(--accent-color);
 }
 
 .navigation-list-link:hover,
@@ -51,13 +48,12 @@ body {
     color: var(--accent-color);
 }
 
+.current-link {
+    color: var(--accent-color);
+}
+
 .contacts-list-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.143px;
-    letter-spacing: 0.02em;
     color: var(--description-color);
-    text-decoration: none;
 }
 
 .contacts-list-link:hover,
@@ -67,7 +63,7 @@ body {
 
 /*======Герой======*/
 .hero {
-    background-color:#2F303A;
+    background-color: var(--header-hero-footer-bg-color);
 }
 
 .main-title {
@@ -76,7 +72,7 @@ body {
     line-height: 1.363;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--main-color);
 }
 
 .order-btn {
@@ -84,7 +80,7 @@ body {
     font-size: var(--common-font-size);
     line-height: 1.875;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
+    color: var(--main-color);
     background-color: var(--accent-color);
     cursor: pointer;
 }
@@ -137,36 +133,32 @@ body {
 
 .team-member-position {
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--common-font-size);
     line-height: 1.188;
     letter-spacing: 0.03em;
     color: var(--description-color);
 }
 /*======Подвал======*/
 .footer {
-    background-color: #2F303A;
+    background-color: var(--header-hero-footer-bg-color);
 }
 
 .logo-studio-footer {
-    color: #FFFFFF;
+    color: var(--main-color);
 }
 
-.address {
-    font-weight: 400;
-    font-size: 14px;
-    font-style: normal;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
-}
-
+.address,
 .contacts-footer-item {
     font-weight: 400;
     font-size: 14px;
     font-style: normal;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    color: var(--main-color);
+}
+
+.contacts-footer-item {
+    color: var(--contact-footer-color);
     text-decoration: none;
 } 
 
@@ -199,7 +191,7 @@ ul[class*="list"] {
 .filter-btn:hover,
 .filter-btn:focus {
     background-color: var(--accent-color);
-    color: #FFFFFF;
+    color: var(--main-color);
 }
 
 /*======Портфолио======*/
@@ -217,7 +209,7 @@ ul[class*="list"] {
 
 .portfolio-list-description {
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--common-font-size);
     line-height: 1.875;
     letter-spacing: 0.03em;
     color: var(--description-color);
